[gd_scene load_steps=4 format=3 uid="uid://brqlpom4m2il8"]

[ext_resource type="Script" uid="uid://cbhcnp4ns8g6u" path="res://Levels/UI/overdose.gd" id="1_qjbks"]
[ext_resource type="Texture2D" uid="uid://d1t7r8t15pq0k" path="res://assets/shroomy.jpg" id="2_6sody"]
[ext_resource type="FontFile" uid="uid://v5wm4xvtuo2a" path="res://assets/Simpsonfont.ttf" id="2_g3ypx"]

[node name="OverdoseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qjbks")

[node name="FadeRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6sody")
stretch_mode = 5
flip_h = true

[node name="PanelContainer" type="PanelContainer" parent="FadeRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -638.0
offset_top = -57.5
offset_right = 638.0
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="FadeRect/PanelContainer"]
layout_mode = 2
text = "Returning to MENU, patience is a virtue"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(2400, 1600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1200.0
offset_top = -800.0
offset_right = 1200.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 120

[node name="Label" type="RichTextLabel" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0.810496, 0.197979, 1)
theme_override_colors/font_shadow_color = Color(0.458405, 0.458405, 0.458405, 1)
theme_override_fonts/normal_font = ExtResource("2_g3ypx")
theme_override_font_sizes/normal_font_size = 128
text = "You dont care anymore"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 120

[node name="Label" type="RichTextLabel" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0.810496, 0.197979, 1)
theme_override_colors/font_shadow_color = Color(0.458405, 0.458405, 0.458405, 1)
theme_override_fonts/normal_font = ExtResource("2_g3ypx")
theme_override_font_sizes/normal_font_size = 256
text = "You Overdosed"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 40

[node name="Label" type="RichTextLabel" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0.810496, 0.197979, 1)
theme_override_colors/font_shadow_color = Color(0.458405, 0.458405, 0.458405, 1)
theme_override_fonts/normal_font = ExtResource("2_g3ypx")
theme_override_font_sizes/normal_font_size = 128
text = "YOu spent your last breath happy"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="quit" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 2
text = "PROUD QUIT"

[node name="menu" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "MAIN MENU
"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/quit" to="." method="_on_quit"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/menu" to="." method="_on_menu"]
